[project]
name = "02-intelligence-query"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=6.0.4",
    "django-cors-headers>=4.9.0",
    "gunicorn>=25.3.0",
    "psycopg[binary]>=3.3.3",
    "python-dotenv>=1.2.2",
    "requests>=2.33.1",
    "uuid7>=0.1.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.11",
]
